--- a/CGC0120/CShape/Bai5/Demo01/Demo01.csproj
+++ b/CGC0120/CShape/Bai5/Demo01/Demo01.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>Bai2.Practice01</StartupObject>
+    <StartupObject>Demo01.Demo01</StartupObject>
   </PropertyGroup>
 
 </Project>
