--- a/CGC0120/CShape/Array/Array.csproj
+++ b/CGC0120/CShape/Array/Array.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>Bai2.Program</StartupObject>
+    <StartupObject>ArrayExample.Array2</StartupObject>
   </PropertyGroup>
 
 </Project>
