--- a/CGC0220/Module2/ArrayDemo/ArrayDemo/ArrayDemo.csproj
+++ b/CGC0220/Module2/ArrayDemo/ArrayDemo/ArrayDemo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>MenuDemo.ArrayDemo</StartupObject>
+    <StartupObject>ArrayDemo.MenuDemo</StartupObject>
   </PropertyGroup>
 
 </Project>
