--- a/CGC0120/CShape/FileDemo/FileDemo/FileDemo.csproj
+++ b/CGC0120/CShape/FileDemo/FileDemo/FileDemo.csproj
@@ -3,7 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>TryCatchDemo.IOFileDemo</StartupObject>
+    <StartupObject>FileDemo.MatrixIODemo</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
 
 </Project>
