--- a/CGC0120/CShape/TryCatchDemo/TryCatchDemo/TryCatchDemo.csproj
+++ b/CGC0120/CShape/TryCatchDemo/TryCatchDemo/TryCatchDemo.csproj
@@ -6,4 +6,8 @@
     <StartupObject>TryCatchDemo.IOFileDemo</StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
